Modif du visuel

--- a/entreprise.html
+++ b/entreprise.html
@@ -22,7 +22,7 @@
 
         <section>
             <div class="card">
-                <h2>L'Entreprise : [NOM]</h2>
+                <h2>L'Agence PRO</h2>
                 <p><strong>Domaine :</strong> Intégration Réseaux & Télécoms.</p>
                 <p>Une structure en pleine expansion qui doit répondre à des clients exigeants tout en structurant ses propres processus internes.</p>
                 <div style="margin-top: 15px;">
