--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main class="container hero-centered animate-enter">
         <div style="font-size: 1rem; color: var(--accent); letter-spacing: 3px; text-transform: uppercase; margin-bottom: 20px; font-weight: bold;">
-            Portfolio — [TON NOM]
+            Portfolio — Victoria
         </div>
 
         <a href="entreprise.html" class="logo-container" aria-label="Voir l'entreprise">
@@ -23,7 +23,7 @@
         </a>
         
         <a href="entreprise.html" class="company-link">
-            [NOM ENTREPRISE]
+            Agence PRO
         </a>
 
         <p style="margin-top: 30px; font-size: 1.3rem;">
