Ajout du contenu

--- a/projet.html
+++ b/projet.html
@@ -52,14 +52,32 @@
         }
 
         /* Couleurs des points et textes */
-        .dot-acquis { background: #2ecc71; box-shadow: 0 0 10px #2ecc71; }
-        .text-acquis { color: #2ecc71; }
+        .dot-acquis {
+            background: #2ecc71;
+            box-shadow: 0 0 10px #2ecc71;
+        }
 
-        .dot-encours { background: #f1c40f; box-shadow: 0 0 10px #f1c40f; }
-        .text-encours { color: #f1c40f; }
+        .text-acquis {
+            color: #2ecc71;
+        }
 
-        .dot-non { background: #e74c3c; box-shadow: 0 0 10px #e74c3c; }
-        .text-non { color: #e74c3c; }
+        .dot-encours {
+            background: #f1c40f;
+            box-shadow: 0 0 10px #f1c40f;
+        }
+
+        .text-encours {
+            color: #f1c40f;
+        }
+
+        .dot-non {
+            background: #e74c3c;
+            box-shadow: 0 0 10px #e74c3c;
+        }
+
+        .text-non {
+            color: #e74c3c;
+        }
 
         /* Ajustement pour les AC dans les missions (plus compact) */
         .ac-box {
@@ -80,18 +98,23 @@
 
         <header style="margin-bottom: 40px;">
             <h1>Déploiement WiFi & Pilotage</h1>
-            <p>Analyse réflexive de mon parcours en alternance.</p>
         </header>
 
         <section style="margin-bottom: 50px;">
             <div class="card">
                 <h2>Le Projet : Le Haras</h2>
                 <p style="margin-top: 15px;">
-                    Déploiement d'une infrastructure réseau sans fil complète sur un site historique. Ce projet mobilise l'ensemble du référentiel de compétences R&T.
+                    Ce projet consiste à assurer du wifi dans l’ensemble du Haras. <br>Celui-ci va se dérouler tout au long
+                    de mon année scolaire. <br>
+                    Tout d’abord, au S3 nous allons nous concentrer sur le déploiement du réseau dans l’ensemble du
+                    domaine ainsi que des bornes wifi dans l’ensemble du château. <br>
+
+                    Puis, au S4 nous nous concentrons sur les autres bâtiments présents dans le Haras.
                 </p>
 
-                <h3 style="margin-top: 25px; margin-bottom: 15px; font-size: 1.1rem; color: var(--accent);">Bilan des Compétences R&T</h3>
-                
+                <h3 style="margin-top: 25px; margin-bottom: 15px; font-size: 1.1rem; color: var(--accent);">Bilan des
+                    Compétences R&T</h3>
+
                 <div class="status-container-box">
                     <span class="status-label">C1 : Administrer les réseaux et l'Internet</span>
                     <div class="status-indicator">
@@ -136,19 +159,20 @@
 
         <div class="accordion-item">
             <button class="accordion-header" aria-expanded="true">
-                <h2>Mission 1 : Audit et Déploiement WiFi</h2>
+                <h2>Mission 1 : Plan Wifi intérieur : Configuration et installation</h2>
                 <span class="accordion-icon">+</span>
             </button>
             <div class="accordion-content" style="max-height: none; opacity: 1;">
                 <div class="accordion-content-inner">
                     <div class="card" style="background: var(--bg-surface-alt);">
                         <h3>Tâches réalisées</h3>
-                        
+
                         <div style="margin-bottom: 25px;">
-                            <h4>Tâche 1 : Audit RF et simulation Ekahau</h4>
+                            <h4>Tâche 1 : faire des plans </h4>
                             <p>Analyse de la propagation des ondes en environnement contraint.</p>
                             <div class="status-container-box ac-box">
-                                <span class="status-label" style="font-size: 0.75rem;">AC21.01 : Maîtriser les technologies sans fil</span>
+                                <span class="status-label" style="font-size: 0.75rem;">AC21.01 : Maîtriser les
+                                    technologies sans fil</span>
                                 <div class="status-indicator">
                                     <span class="status-dot dot-acquis"></span>
                                     <span class="status-text text-acquis">Acquis</span>
@@ -157,10 +181,11 @@
                         </div>
 
                         <div style="margin-bottom: 25px;">
-                            <h4>Tâche 2 : Configuration des équipements Aruba</h4>
+                            <h4>Tâche 2 : Configuration des bornes wifi</h4>
                             <p>Paramétrage des SSIDs et segmentation par VLANs.</p>
                             <div class="status-container-box ac-box">
-                                <span class="status-label" style="font-size: 0.75rem;">AC11.02 : Administrer un réseau LAN</span>
+                                <span class="status-label" style="font-size: 0.75rem;">AC11.02 : Administrer un réseau
+                                    LAN</span>
                                 <div class="status-indicator">
                                     <span class="status-dot dot-acquis"></span>
                                     <span class="status-text text-acquis">Acquis</span>
@@ -174,7 +199,8 @@
                         <div style="margin-bottom: 15px;">
                             <h4>Heatmap WiFi (Ekahau)</h4>
                             <p>Rapport prédictif montrant les niveaux de couverture (RSSI).</p>
-                            <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre la maîtrise du dimensionnement RF (AC21.01).</p>
+                            <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre la
+                                maîtrise du dimensionnement RF (AC21.01).</p>
                         </div>
                     </div>
 
@@ -199,7 +225,8 @@
                             <h4>Tâche 1 : Suivi de planning (Gantt)</h4>
                             <p>Coordination des délais et des techniciens.</p>
                             <div class="status-container-box ac-box">
-                                <span class="status-label" style="font-size: 0.75rem;">AC31.02 : Planifier un projet</span>
+                                <span class="status-label" style="font-size: 0.75rem;">AC31.02 : Planifier un
+                                    projet</span>
                                 <div class="status-indicator">
                                     <span class="status-dot dot-acquis"></span>
                                     <span class="status-text text-acquis">Acquis</span>
@@ -213,7 +240,8 @@
                         <div style="margin-bottom: 15px;">
                             <h4>Diagramme de Gantt</h4>
                             <p>Planning détaillé incluant les jalons de livraison.</p>
-                            <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre l'aptitude à anticiper les contraintes (AC31.02).</p>
+                            <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre
+                                l'aptitude à anticiper les contraintes (AC31.02).</p>
                         </div>
                     </div>
                 </div>
@@ -228,4 +256,5 @@
 
     <script src="js/theme.js"></script>
 </body>
+
 </html>
