--- a/entreprise.html
+++ b/entreprise.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr" data-theme="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entreprise & Contexte</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
 
     <a href="index.html" class="nav-back" aria-label="Retour Accueil">&larr;</a>
@@ -14,21 +16,29 @@
     </button>
 
     <main class="container animate-enter">
-        
+
         <header style="text-align: center; margin-bottom: 60px;">
-            <h1>Contexte & Positionnement</h1>
-            <p>Comprendre l'environnement avant d'agir.</p>
+            <h1>Entreprise & Positionnement</h1>
         </header>
 
         <section>
             <div class="card">
                 <h2>L'Agence PRO</h2>
-                <p><strong>Domaine :</strong> Intégration Réseaux & Télécoms.</p>
-                <p>Une structure en pleine expansion qui doit répondre à des clients exigeants tout en structurant ses propres processus internes.</p>
-                <div style="margin-top: 15px;">
-                    <span class="tag tag-ac">Enjeu : Fiabilité</span>
-                    <span class="tag tag-ac">Enjeu : Délais</span>
-                </div>
+                <p>Entreprise de télécommunications et les infrastructures numériques pour
+                    professionnels située à Bretteville-sur-Odon. <br>
+
+                    Les domaines d'expertise de l'entreprise sont : <br>
+                    <strong> - Téléphonie d'entreprise :</strong> solutions IP, téléphonie mobile WiFi ou DECT, communications
+                    intégrées (CTI), softphones <br>
+                    <strong> - Internet professionnel </strong> et réseaux d'entreprises multi-sites <br>
+                    <strong> - Solutions de communication : </strong> messagerie vocale et unifiée, vidéo sur poste de travail, gestion
+                    des fax et SMS <br>
+                    <strong> - Services cloud </strong> et UCaaS (Unified Communications as a Service) <br>
+                    <strong> - Sécurité : </strong> SBC pour l'interopérabilité et la sécurité des communications <br>
+                    <strong> - Gestion et optimisation </strong> des coûts de communication <br>
+
+                    L'Agence PRO se distingue en s’adaptant et en proposant des solutions aux besoins spécifiques de
+                    chaque secteur d'activité (santé, transport, etc.).</p>
             </div>
         </section>
 
@@ -45,7 +55,8 @@
                 </div>
                 <div class="card">
                     <h3>Ma valeur ajoutée</h3>
-                    <p>Faire le pont entre les besoins abstraits du client ("ça doit marcher") et la réalité technique ("il faut tel VLAN").</p>
+                    <p>Faire le pont entre les besoins abstraits du client ("ça doit marcher") et la réalité technique
+                        ("il faut tel VLAN").</p>
                 </div>
             </div>
 
@@ -64,4 +75,5 @@
 
     <script src="js/theme.js"></script>
 </body>
+
 </html>
