Ajout de contenu

--- a/entreprise.html
+++ b/entreprise.html
@@ -25,7 +25,7 @@
             <div class="card">
                 <h2>L'Agence PRO</h2>
                 <p>Entreprise de télécommunications et les infrastructures numériques pour
-                    professionnels située à Bretteville-sur-Odon. <br>
+                    professionnels située à Bretteville-sur-Odon. <br> Il n'y a pas de sous-services
 
                     Les domaines d'expertise de l'entreprise sont : <br>
                     <strong> - Téléphonie d'entreprise :</strong> solutions IP, téléphonie mobile WiFi ou DECT, communications
@@ -50,13 +50,15 @@
                     <ul>
                         <li>• Audit technique sur site</li>
                         <li>• Configuration équipements (Cisco/Aruba)</li>
-                        <li>• Interlocuteur technique client</li>
+                        <li>• Technicienne </li>
+                        <li>• Service après vente </li>
                     </ul>
                 </div>
                 <div class="card">
                     <h3>Ma valeur ajoutée</h3>
                     <p>Faire le pont entre les besoins abstraits du client ("ça doit marcher") et la réalité technique
-                        ("il faut tel VLAN").</p>
+                        ("il faut tel VLAN").
+                    </p>
                 </div>
             </div>
 
@@ -67,7 +69,6 @@
         </section>
 
         <div style="text-align: center; margin-top: 60px;">
-            <p>Le cadre est posé. Passons à la réalisation.</p>
             <a href="projet.html" class="btn btn-primary">Voir les missions &rarr;</a>
         </div>
 
