--- a/projet.html
+++ b/projet.html
@@ -104,7 +104,8 @@
             <div class="card">
                 <h2>Le Projet : Le Haras</h2>
                 <p style="margin-top: 15px;">
-                    Ce projet consiste à assurer du wifi dans l’ensemble du Haras. <br>Celui-ci va se dérouler tout au long
+                    Ce projet consiste à assurer du wifi dans l’ensemble du Haras. <br>Celui-ci va se dérouler tout au
+                    long
                     de mon année scolaire. <br>
                     Tout d’abord, au S3 nous allons nous concentrer sur le déploiement du réseau dans l’ensemble du
                     domaine ainsi que des bornes wifi dans l’ensemble du château. <br>
@@ -116,7 +117,7 @@
                     Compétences R&T</h3>
 
                 <div class="status-container-box">
-                    <span class="status-label">C1 : Administrer les réseaux et l'Internet</span>
+                    <span class="status-label">RT1 : Administrer les réseaux et l'Internet</span>
                     <div class="status-indicator">
                         <span class="status-dot dot-acquis"></span>
                         <span class="status-text text-acquis">Acquis</span>
@@ -124,7 +125,7 @@
                 </div>
 
                 <div class="status-container-box">
-                    <span class="status-label">C2 : Connecter les entreprises et les usagers</span>
+                    <span class="status-label">RT2 : Connecter les entreprises et les usagers</span>
                     <div class="status-indicator">
                         <span class="status-dot dot-acquis"></span>
                         <span class="status-text text-acquis">Acquis</span>
@@ -132,7 +133,7 @@
                 </div>
 
                 <div class="status-container-box">
-                    <span class="status-label">C3 : Créer des outils et applications informatiques</span>
+                    <span class="status-label">RT3 : Créer des outils et applications informatiques pour les R&T</span>
                     <div class="status-indicator">
                         <span class="status-dot dot-encours"></span>
                         <span class="status-text text-encours">En cours</span>
@@ -140,7 +141,7 @@
                 </div>
 
                 <div class="status-container-box">
-                    <span class="status-label">C4 : Piloter des projets réseaux et télécoms</span>
+                    <span class="status-label">Cyber1 : Administrer un système d'information sécurisé </span>
                     <div class="status-indicator">
                         <span class="status-dot dot-acquis"></span>
                         <span class="status-text text-acquis">Acquis</span>
@@ -148,7 +149,7 @@
                 </div>
 
                 <div class="status-container-box">
-                    <span class="status-label">C5 : Sécuriser les infrastructures et les données</span>
+                    <span class="status-label">Cyber2 : Surveiller un système d'information sécurisé</span>
                     <div class="status-indicator">
                         <span class="status-dot dot-encours"></span>
                         <span class="status-text text-encours">En cours</span>
@@ -168,7 +169,7 @@
                         <h3>Tâches réalisées</h3>
 
                         <div style="margin-bottom: 25px;">
-                            <h4>Tâche 1 : faire des plans </h4>
+                            <h4>Tâche 1 : Faire des plans Wifi </h4>
                             <p>Analyse de la propagation des ondes en environnement contraint.</p>
                             <div class="status-container-box ac-box">
                                 <span class="status-label" style="font-size: 0.75rem;">AC21.01 : Maîtriser les
@@ -181,7 +182,7 @@
                         </div>
 
                         <div style="margin-bottom: 25px;">
-                            <h4>Tâche 2 : Configuration des bornes wifi</h4>
+                            <h4>Tâche 2 : Configuration des bornes Wifi</h4>
                             <p>Paramétrage des SSIDs et segmentation par VLANs.</p>
                             <div class="status-container-box ac-box">
                                 <span class="status-label" style="font-size: 0.75rem;">AC11.02 : Administrer un réseau
@@ -195,10 +196,10 @@
                     </div>
 
                     <div class="card">
-                        <h3>🔎 Preuves & Livrables</h3>
+                        <h3>Preuves & Livrables</h3>
                         <div style="margin-bottom: 15px;">
-                            <h4>Heatmap WiFi (Ekahau)</h4>
-                            <p>Rapport prédictif montrant les niveaux de couverture (RSSI).</p>
+                            <h4>Plan Wifi du Haras</h4>
+                            <p>Rapport prédictif montrant les niveaux de couverture du Wifi dans le Haras.</p>
                             <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre la
                                 maîtrise du dimensionnement RF (AC21.01).</p>
                         </div>
@@ -206,7 +207,8 @@
 
                     <div class="card">
                         <h3>Analyse réflexive</h3>
-                        <p><strong>Apprentissage :</strong> L'ingénierie radio est primordiale pour la stabilité.</p>
+                        <p><strong>Apprentissage :</strong> Configuration et installation de bornes Wifi, plan de
+                            converture wifi, test de couverture wifi </p>
                     </div>
                 </div>
             </div>
@@ -225,8 +227,8 @@
                             <h4>Tâche 1 : Suivi de planning (Gantt)</h4>
                             <p>Coordination des délais et des techniciens.</p>
                             <div class="status-container-box ac-box">
-                                <span class="status-label" style="font-size: 0.75rem;">AC31.02 : Planifier un
-                                    projet</span>
+                                <span class="status-label" style="font-size: 0.75rem;">AC21.06 : Travailler en équipe pour
+                                    développer ses compétences professionnelles </span>
                                 <div class="status-indicator">
                                     <span class="status-dot dot-acquis"></span>
                                     <span class="status-text text-acquis">Acquis</span>
@@ -236,13 +238,17 @@
                     </div>
 
                     <div class="card">
-                        <h3>🔎 Preuves & Livrables</h3>
+                        <h3>Preuves & Livrables</h3>
                         <div style="margin-bottom: 15px;">
                             <h4>Diagramme de Gantt</h4>
                             <p>Planning détaillé incluant les jalons de livraison.</p>
                             <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre
                                 l'aptitude à anticiper les contraintes (AC31.02).</p>
                         </div>
+                    </div>
+                    <div class="card">
+                        <h3>Analyse réflexive</h3>
+                        <p><strong>Apprentissage :</strong> Gestion de projet, coordination des lots </p>
                     </div>
                 </div>
             </div>
