Ajout full contenu

--- a/entreprise.html
+++ b/entreprise.html
@@ -25,7 +25,7 @@
             <div class="card">
                 <h2>L'Agence PRO</h2>
                 <p>Entreprise de télécommunications et les infrastructures numériques pour
-                    professionnels située à Bretteville-sur-Odon. <br> Il n'y a pas de sous-services
+                    professionnels située à Bretteville-sur-Odon. <br> L'entreprise ne possède pas de sous-services. <br>
 
                     Les domaines d'expertise de l'entreprise sont : <br>
                     <strong> - Téléphonie d'entreprise :</strong> solutions IP, téléphonie mobile WiFi ou DECT, communications
