--- a/projet.html
+++ b/projet.html
@@ -97,76 +97,161 @@
     <main class="container animate-enter">
 
         <header style="margin-bottom: 40px;">
-            <h1>Déploiement WiFi & Pilotage</h1>
+            <h1>Projet : Le Haras du Quenay</h1>
         </header>
 
         <section style="margin-bottom: 50px;">
             <div class="card">
-                <h2>Le Projet : Le Haras</h2>
+                <img src="\assets\chateau.jpg" alt="chateau">
                 <p style="margin-top: 15px;">
-                    Ce projet consiste à assurer du wifi dans l’ensemble du Haras. <br>Celui-ci va se dérouler tout au
+                    Ce projet consiste à installer Internet dans l’ensemble du Haras. <br>Le terrain étant totalement
+                    vierge nous avons du réfléchir à l'installation des éléments nécessaires du début à la fin.
+                    <br>Ce projet va se dérouler tout au
                     long
                     de mon année scolaire. <br>
                     Tout d’abord, au S3 nous allons nous concentrer sur le déploiement du réseau dans l’ensemble du
-                    domaine ainsi que des bornes wifi dans l’ensemble du château. <br>
+                    domaine ainsi que des bornes wifi dans le château. <br>
 
-                    Puis, au S4 nous nous concentrons sur les autres bâtiments présents dans le Haras.
+                    Puis, au S4 nous nous concentrons sur les autres bâtiments présents dans le Haras. <br> Ce projet
+                    était tout particulièrement difficile car il a demandé beaucoup de coordination des lots. <br> Mais
+                    surtout, il a demandé une réelle réflexion lors de l'installation des bornes Wifi car la
+                    principale containte était que les bornes ne devaient pas être visibles.
                 </p>
-
-                <h3 style="margin-top: 25px; margin-bottom: 15px; font-size: 1.1rem; color: var(--accent);">Bilan des
-                    Compétences R&T</h3>
-
-                <div class="status-container-box">
-                    <span class="status-label">RT1 : Administrer les réseaux et l'Internet</span>
-                    <div class="status-indicator">
-                        <span class="status-dot dot-acquis"></span>
-                        <span class="status-text text-acquis">Acquis</span>
-                    </div>
-                </div>
-
-                <div class="status-container-box">
-                    <span class="status-label">RT2 : Connecter les entreprises et les usagers</span>
-                    <div class="status-indicator">
-                        <span class="status-dot dot-acquis"></span>
-                        <span class="status-text text-acquis">Acquis</span>
-                    </div>
-                </div>
-
-                <div class="status-container-box">
-                    <span class="status-label">RT3 : Créer des outils et applications informatiques pour les R&T</span>
-                    <div class="status-indicator">
-                        <span class="status-dot dot-encours"></span>
-                        <span class="status-text text-encours">En cours</span>
-                    </div>
-                </div>
-
-                <div class="status-container-box">
-                    <span class="status-label">Cyber1 : Administrer un système d'information sécurisé </span>
-                    <div class="status-indicator">
-                        <span class="status-dot dot-acquis"></span>
-                        <span class="status-text text-acquis">Acquis</span>
-                    </div>
-                </div>
-
-                <div class="status-container-box">
-                    <span class="status-label">Cyber2 : Surveiller un système d'information sécurisé</span>
-                    <div class="status-indicator">
-                        <span class="status-dot dot-encours"></span>
-                        <span class="status-text text-encours">En cours</span>
-                    </div>
-                </div>
             </div>
         </section>
 
+
+        <div class="accordion-item">
+            <button class="accordion-header" aria-expanded="false">
+                <h2>Mission 1 : Prérequis & Gestion de projet </h2>
+                <span class="accordion-icon">+</span>
+            </button>
+            <div class="accordion-content">
+                <div class="accordion-content-inner">
+                    <div class="card" style="background: var(--bg-surface-alt);">
+                        <h3>Tâches réalisées :</h3>
+                        <div style="margin-bottom: 25px;">
+
+
+                            <h4>Tâche 1 : Collecte de données </h4>
+                            <p>L’objectif de cette mission était de faire de la collecte/analyse des besoins des autres
+                                lots et de la gestion des différents acteurs de l’installation Internet. <br> Pour cela,
+                                nous avons contacter les différents acteurs intervenant dans le Haras et nous
+                                leurs avons fourni un document de prérequis réseaux. <br> L'objectif du document est
+                                d'évaluer les besoins réseaux des différents lots
+                                techniques. </p>
+
+                            <div style="margin-bottom: 15px;">
+                                <h3>Preuves/Livrables :</h3>
+                                <a href="\assets\Prerequis_Reseaux_Haras.pdf"><img src="\assets\Document_prerequis.png"
+                                        alt="doc"></a>
+                                <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre
+                                    l'aptitude à anticiper les contraintes (AC31.02).</p>
+                            </div>
+                            <div class="status-container-box ac-box">
+                                <span class="status-label" style="font-size: 0.75rem;">AC21.06 : Travailler en équipe
+                                    pour
+                                    développer ses compétences professionnelles </span>
+                                <div class="status-indicator">
+                                    <span class="status-dot dot-acquis"></span>
+                                    <span class="status-text text-acquis">Acquis</span>
+                                </div>
+                            </div>
+
+                            <h4>Tâche 2 : Plan IP </h4>
+                            <p>L'élaboration du plan IP est très important dans un projet, ce sont les fondations de la
+                                pyramide : sans cela rien ne tiens. <br> C'est pourquoi, nous avons prévu un plan IP large pour mettre une évolutivité. </p>
+
+                            <div style="margin-bottom: 15px;">
+                                <h3>Preuves/Livrables :</h3>
+
+                                <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre
+                                    l'aptitude à anticiper les contraintes (AC31.02).</p>
+                            </div>
+                            <div class="status-container-box ac-box">
+                                <span class="status-label" style="font-size: 0.75rem;">AC21.06 : Travailler en équipe
+                                    pour
+                                    développer ses compétences professionnelles </span>
+                                <div class="status-indicator">
+                                    <span class="status-dot dot-acquis"></span>
+                                    <span class="status-text text-acquis">Acquis</span>
+                                </div>
+                            </div>
+
+                            <h4>Tâche 3 : Tirer la fibre </h4>
+                            <p>Un aussi gros projet se fait toujours accompagné d'autres personnes ! <br> Pour commencer
+                                nous devions contacter l'entreprise Normandie drainage pour installer les chambres de
+                                tirages afin de tirer la fibre entre la rue et la baie principale du Harras. <br> Puis
+                                l'entreprise "CIRCET" qui est mandaté par la fibre COVAGE pour l’installation, a tiré la
+                                fibre
+                                dans le fourreaux PTT (FTTO). <br> Afin de leurs faire gagner du temps, nous les
+                                avons guidés.
+                                <img src="\assets\chambre.jpg" alt="fibre">
+                                <img src="\assets\chambre_2.jpg" alt="fibre">
+                                <img src="\assets\chambre_3.jpg" alt="fibre">
+                            </p>
+                            <div class="status-container-box ac-box">
+                                <span class="status-label" style="font-size: 0.75rem;">AC21.06 : Travailler en équipe
+                                    pour
+                                    développer ses compétences professionnelles </span>
+                                <div class="status-indicator">
+                                    <span class="status-dot dot-acquis"></span>
+                                    <span class="status-text text-acquis">Acquis</span>
+                                </div>
+                            </div>
+                        </div>
+                        <h4>Tâche 4 : Travailler avec les autres lots </h4>
+                        <p>Une
+                            fois les
+                            plans Wifi terminés, nous avons réalisé que pour pouvoir cacher certaines bornes
+                            Wifi nous allions avoir besoin de les cacher dans des meubles. <br> Nous avons alors
+                            contacté les menuisiers et charpentiers présents sur le Harras pour pouvoir prévoir les
+                            bornes DANS leurs meubles. <br> Puis une fois cela convenu, nous avons pu travailler
+                            avec les électriciens car c'était eux qui étaient responsables de tirer les câbles
+                            ethernet entre la baie et l'emplacement prédéfinis des bornes.</p>
+
+
+                        <div class="card">
+                            <h3>Preuves & Livrables</h3>
+                            <div style="margin-bottom: 15px;">
+                                <img src="\assets\mur.jpg" alt="mur">
+                                <img src="\assets\meuble.jpg" alt="meuble">
+                                <img src="\assets\meuble_2.jpg" alt="meuble">
+                                <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre
+                                    l'aptitude à anticiper les contraintes (AC31.02).</p>
+                            </div>
+                        </div>
+
+                        <div class="status-container-box ac-box">
+                            <span class="status-label" style="font-size: 0.75rem;">AC21.06 : Travailler en équipe
+                                pour
+                                développer ses compétences professionnelles </span>
+                            <div class="status-indicator">
+                                <span class="status-dot dot-acquis"></span>
+                                <span class="status-text text-acquis">Acquis</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <h3>Analyse réflexive</h3>
+                        <p><strong>Apprentissage :</strong> Gestion de projet, coordination des lots </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
         <div class="accordion-item">
             <button class="accordion-header" aria-expanded="true">
-                <h2>Mission 1 : Plan Wifi intérieur : Configuration et installation</h2>
+                <h2>Mission 2 : Plan Wifi intérieur : Configuration et installation</h2>
                 <span class="accordion-icon">+</span>
             </button>
             <div class="accordion-content" style="max-height: none; opacity: 1;">
                 <div class="accordion-content-inner">
                     <div class="card" style="background: var(--bg-surface-alt);">
-                        <h3>Tâches réalisées</h3>
+                        <h3>Tâches réalisées :</h3>
 
                         <div style="margin-bottom: 25px;">
                             <h4>Tâche 1 : Faire des plans Wifi </h4>
@@ -193,6 +278,41 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div style="margin-bottom: 25px;">
+                            <h4>Tâche 3 : Installation des bornes Wifi</h4>
+                            <p>A première vu cela semble plutôt simple car nous devions en théorie juste suivre le plan
+                                Wifi fait en amont. <br> Mais en
+                                réalité, c'était plus complexe que ça ! <br> Certaines bornes wifi se sont retrouvées à
+                                d'autres endroits qu'initialement prévu car les électriciens n'avaient pas réussi à
+                                tirer les câbles comme prévu. <br> De plus, par manque de temps et de coordination une
+                                borne s'est retrouvée derrière un frigo, sauf que ce frigo est directement dans le
+                                meuble. <br> Cela n'a pas causé de problème de couverture car nous avions orienté la
+                                borne de façon à ce qu'elle ne se retrouve pas orienté face au frigo. <br> Cependant,
+                                d'un
+                                point de vu pratique, si un jour cette borne venait à avoir besoin d'être dépannée ou
+                                remplacée, cela sera très délicat. </p>
+
+                            <p> Cependant, travailler en équipe comporte toujours des imprévus. En effet lors de
+                                l'installation des câbles ethernet par les électriciens, certains employés
+                                avaient tirés les câbles mais pas mit les noyaux ou bout des câbles. <br> Ce qui nous a
+                                alors retardé lors du déploiement des bornes. <br>
+                                De plus, les charpentiers et les peintres présent dans le château avaient eux aussi une
+                                "deadline" très courte et il arrivait souvent que nos travaux se chevauchent. Par fois
+                                même pire, nous devions installer des bornes dans des meubles qui n'étaient pas encore
+                                existants. <br>
+                                Il est difficile de peindre un relou dcp on a du faire
+                                d’autres bornes en attendant qu’ils ai fini/ que la peinture ai séchées </p>
+                            <div class="status-container-box ac-box">
+                                <span class="status-label" style="font-size: 0.75rem;">AC11.02 : Administrer un réseau
+                                    LAN</span>
+                                <div class="status-indicator">
+                                    <span class="status-dot dot-acquis"></span>
+                                    <span class="status-text text-acquis">Acquis</span>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
 
                     <div class="card">
@@ -214,46 +334,17 @@
             </div>
         </div>
 
-        <div class="accordion-item">
-            <button class="accordion-header" aria-expanded="false">
-                <h2>Mission 2 : Gestion de Projet</h2>
-                <span class="accordion-icon">+</span>
-            </button>
-            <div class="accordion-content">
-                <div class="accordion-content-inner">
-                    <div class="card" style="background: var(--bg-surface-alt);">
-                        <h3>Tâches réalisées</h3>
-                        <div style="margin-bottom: 25px;">
-                            <h4>Tâche 1 : Suivi de planning (Gantt)</h4>
-                            <p>Coordination des délais et des techniciens.</p>
-                            <div class="status-container-box ac-box">
-                                <span class="status-label" style="font-size: 0.75rem;">AC21.06 : Travailler en équipe pour
-                                    développer ses compétences professionnelles </span>
-                                <div class="status-indicator">
-                                    <span class="status-dot dot-acquis"></span>
-                                    <span class="status-text text-acquis">Acquis</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="card">
-                        <h3>Preuves & Livrables</h3>
-                        <div style="margin-bottom: 15px;">
-                            <h4>Diagramme de Gantt</h4>
-                            <p>Planning détaillé incluant les jalons de livraison.</p>
-                            <p style="font-style: italic; color: var(--accent); font-size: 0.85rem;">→ Démontre
-                                l'aptitude à anticiper les contraintes (AC31.02).</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <h3>Analyse réflexive</h3>
-                        <p><strong>Apprentissage :</strong> Gestion de projet, coordination des lots </p>
-                    </div>
-                </div>
-            </div>
+
+
+
+        <div class="card" style="border-left: 5px solid var(--accent); background: var(--bg-surface-alt);">
+            <h3>Analyse des compétences mobilisées</h3>
+            <p>Ce projet au Haras m'a permis de valider plusieurs compétences clés du référentiel R&T (RT1, RT2,
+                RT3 et Cyber). </p>
+            <a href="analyse.html" class="btn btn-outline" style="margin-top: 15px;">Accéder à l'analyse
+                réflexive globale &rarr;</a>
         </div>
-
         <footer style="margin-top: 80px; text-align: center; color: var(--text-muted);">
             <p>Portfolio BUT R&T - Victoria</p>
         </footer>
